# cvlab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  build_android.sh  build_ceres_android.sh  build_ceres_linux.sh  build_cvlab_android.sh  build_eigen.sh  build_opencv_android.sh  build_opencv_linux.sh  motion3d.code-workspace
apps/: CMakeLists.txt
apps/android/: build.gradle  gradle.properties  settings.gradle
apps/android/app/: .gitignore  build.gradle  proguard-rules.pro
apps/android/app/src/androidTest/java/ai/motion3d/: ExampleInstrumentedTest.kt
apps/android/app/src/debug/res/values/: strings.xml
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/cpp/: .clang-format  CMakeLists.txt  calib_manager.cpp  calib_manager.h  camera_android.cpp  camera_android.h  common.h  cvlab_app.cpp  cvlab_app.h  cvlab_interface.cpp  gl_program.cpp  gl_program.h  logger.cpp  logger.h  motion3d_app.cpp  motion3d_app.h  motion3d_interface.cpp  native-lib.cpp  renderer.cpp  renderer.h
apps/android/app/src/main/cpp/java_classes/: android_os_message.cpp  android_os_message.h  java_classes.cpp  java_classes.h  jni_helpers.cpp  jni_helpers.h
apps/android/app/src/main/java/ai/cvlab/: CalibrationFragment.kt  CameraRenderer.kt  CameraSurfaceView.kt  Cvlab.kt  DepthFragment.kt  Logger.kt  MainActivity.kt  MainFragment.kt  PermissionManager.kt  Utils.kt
apps/android/app/src/main/java/ai/motion3d/: CameraRenderer.kt  CameraSurfaceView.kt  Logger.kt  MainActivity.kt  Motion3d.kt
apps/android/app/src/main/res/anim/: slide_in_right.xml  slide_out_left.xml
apps/android/app/src/main/res/layout/: activity_main.xml  fragment_calibration.xml  fragment_depth.xml  fragment_main.xml
apps/android/app/src/main/res/navigation/: nav_graph.xml
apps/android/app/src/main/res/values/: strings.xml
apps/android/app/src/stage/res/values/: strings.xml
apps/android/app/src/test/java/ai/motion3d/: ExampleUnitTest.kt
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/desktop/: CMakeLists.txt  main.cpp
apps/desktop_calibration/: CMakeLists.txt  main.cpp
apps/desktop_tracking/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  common.h  scene.cpp  scene.h  tracker.cpp  tracker.h  utils.cpp  utils.h  view.cpp  view.h
core/include/: common.h  scene.h  view.h
core/include/matching/: cascade_hasher.h
core/include/tracking/: cashash_tracker.h
core/matching/: cascade_hasher.h
core/src/: calibrator.cpp  calibrator.h  common.h  features_collection.h  image_loop.cpp  image_loop.h  mvg.cpp  mvg.h  scene.cpp  scene.h  utils.cpp  utils.h  view.cpp  view.h
core/src/matching/: cascade_hasher.h  cashash_matcher.cpp  cashash_matcher.h  matcher.h
core/src/tracking/: cashash_tracker.cpp  klt_tracker.cpp  klt_tracker.h
core/tracking/: cashash_tracker.h  klt_tracker.cpp  klt_tracker.h
keys/: cvlab-android-dev.keystore  cvlab-android-prod.keystore  gen_keystore.sh
